--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
+  "homepage": "https://cbtruong.github.io/VietTriDao",
   "name": "viettridao",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "npx gh-pages -d dist",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -26,6 +28,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
